Changelog
=========
[David Ichim - david.ichim@eaudeweb.ro]
[Per Thulin - Valentine Web Systems]

0.6-dev - (unreleased)
----------------------

0.5 - (2011-03-17)
------------------
 * Bug fix: fixed wrong anchors that spanned over paragraphs [ichimdav #4196]
 * Bug fix: Added translation domain to ZCML files [voineali #4139]

0.4 - (2011-03-09)
------------------
 * Change: cleaned test, added doctypes, fixed pylint violations warnings [ichimdav #4140]

0.3 - (2011-03-01)
------------------
 * Change: surpressed error messages with an info status message [ichimdav #3883]
 * Bug fix: fix epub file import [ichimdav #3883]

0.2 (2010-10-29)
-------------------
 * Feature: add-to-folder menu item [thuliper #3627]
 * Bug fix: image link fixes [thuliper #3711]

0.1 (2010-10-11)
-------------------
 - Initial release
