@@ -3,23 +3,8 @@
     i18n:domain="plone">
     <body>
 
-        <metal:portlet metal:define-macro="portlet" tal:define="view context/@@epub_toc_logic; utils context/@@epub_utils">
-
-            <dl id="document-toc" class="portlet epub" style="width:100%" tal:condition="utils/isPartOfImportedBook">
-                <dt class="portletHeader">
-                    <span i18n:translate="label_tableofcontents">Contents</span>
-                </dt>
-                <dd class="portletItem">
-                    <ol>
-                        <li tal:repeat="navPoint view/getNavPoints">
-                            <a tal:attributes="href navPoint/href" tal:content="navPoint/label"></a>
-                        </li>
-                    </ol>
-                </dd>
-            </dl>
-            <div class="visualClear">&nbsp;</div>
+        <metal:portlet metal:define-macro="portlet" tal:define="utils context/@@epub_utils">
             <a class="downloadLink" tal:attributes="href utils/getEpubFormatURL" tal:condition="utils/getEpubFormatURL">EPUB format</a>
-
         </metal:portlet>
     </body>
 </html>
