@@ -2,10 +2,12 @@ Changelog
 =========
 [David Ichim - david.ichim@eaudeweb.ro]
 [Per Thulin - Valentine Web Systems]
+[demarant - Antonio De Marinis - EEA]
 
 0.6-dev - (unreleased)
 ----------------------
-
+ * Bug: fixes #4242 Removed / clean up, the portlet epub and toc, 
+   we can use standard plone nav [demarant]
 0.5 - (2011-03-17)
 ------------------
  * Bug fix: fixed wrong anchors that spanned over paragraphs [ichimdav #4196]
